Name: datapacker
Version: 0.5.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Stable
Copyright: Copyright (c) 2008 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, INSTALL, doc/SConstruct,
  doc/hpodder-manpage.sgml, doc/hpodder.sgml, doc/local.dsl,
  doc/man.hpodder.sgml, doc/printlocal.dsl, doc/sgml-common/COPYING,
  doc/sgml-common/COPYRIGHT, doc/sgml-common/ChangeLog,
  doc/sgml-common/Makefile.common, doc/sgml-common/SConstruct,
  doc/sgml-common/ps2epsi
homepage: http://software.complete.org/datapacker
Build-type: Simple
Category: Network
Synopsis: Tools to help pack files into the minimum number of CDs/DVDs/etc
Description: FIXME
 FIXME
 .
 FIXME
Build-Depends: unix, MissingH>=1.0.0, mtl, base, filepath, directory,
               hslogger, process


Executable: datapacker
Main-Is: datapacker.hs
-- GHC-Options: -O2 -Werror -fwarn-incomplete-patterns
--              -fwarn-overlapping-patterns -fwarn-simple-patterns
   
GHC-Options: -O2 -Werror -Wall
     
-- Extensions: ExistentialQuantification, OverlappingInstances,
--    UndecidableInstances
